@@ -1,4 +1,4 @@
-package org.molgenis.js;
+package org.molgenis.js.magma;
 
 import static com.google.common.collect.Lists.newArrayList;
 import static java.lang.Double.valueOf;
@@ -9,7 +9,10 @@ import static java.time.ZoneOffset.UTC;
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static org.molgenis.data.meta.AttributeType.BOOL;
@@ -24,28 +27,28 @@ import static org.molgenis.data.meta.AttributeType.STRING;
 import static org.molgenis.data.meta.SystemEntityType.UNIFIED_IDENTIFIER_REGEX_JS;
 
 import com.google.common.base.Stopwatch;
-import java.io.IOException;
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
 import java.time.Instant;
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Locale;
 import java.util.concurrent.TimeUnit;
-import javax.script.ScriptException;
+import java.util.stream.Collectors;
+import org.graalvm.polyglot.PolyglotException;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.molgenis.data.Entity;
 import org.molgenis.data.meta.model.Attribute;
 import org.molgenis.data.meta.model.EntityType;
 import org.molgenis.data.support.DynamicEntity;
-import org.molgenis.js.magma.JsMagmaScriptEvaluator;
-import org.molgenis.js.nashorn.NashornScriptEngine;
+import org.molgenis.js.graal.GraalScriptEngine;
 
-class JsMagmaScriptEvaluatorTest {
+class JsMagmaScriptContextTest {
   private static EntityType personWeightEntityType;
   private static EntityType personHeightEntityType;
   private static EntityType personWeightAndHeightEntityType;
@@ -61,10 +64,10 @@ class JsMagmaScriptEvaluatorTest {
   private static EntityType genderEntityType;
   private static EntityType traitEntityType;
 
-  private static JsMagmaScriptEvaluator jsMagmaScriptEvaluator;
+  private static JsMagmaScriptContext magmaContext;
 
   @BeforeAll
-  static void beforeClass() throws ScriptException, IOException {
+  static void beforeClass() {
     Attribute idAttribute = mock(Attribute.class);
     when(idAttribute.getName()).thenReturn("id");
     when(idAttribute.getDataType()).thenReturn(STRING);
@@ -167,7 +170,8 @@ class JsMagmaScriptEvaluatorTest {
     when(personLongEntityType.getAtomicAttributes())
         .thenReturn(newArrayList(idAttribute, longAttr));
 
-    jsMagmaScriptEvaluator = new JsMagmaScriptEvaluator(new NashornScriptEngine());
+    var graalScriptEngine = new GraalScriptEngine();
+    magmaContext = new JsMagmaScriptContext(graalScriptEngine.createContext());
   }
 
   @SuppressWarnings("UnnecessaryBoxing")
@@ -177,7 +181,8 @@ class JsMagmaScriptEvaluatorTest {
     Instant lastUpdate = Instant.now();
     person.set("lastUpdate", lastUpdate);
 
-    Object result = jsMagmaScriptEvaluator.eval("$('lastUpdate').value()", person, 1);
+    magmaContext.bind(person);
+    Object result = magmaContext.eval("$('lastUpdate').value()");
     assertEquals(valueOf(lastUpdate.toEpochMilli()), result);
   }
 
@@ -186,7 +191,8 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personSmokingEntityType);
     person.set("smoking", true);
 
-    Object result = jsMagmaScriptEvaluator.eval("$('smoking').value()", person, 1);
+    magmaContext.bind(person);
+    Object result = magmaContext.eval("$('smoking').value()");
     assertEquals(true, result);
   }
 
@@ -195,8 +201,9 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personSmokingEntityType);
     person.set("id", "0-bbmri-EriC999");
     String expression = format("$('id').matches(%s).value()", UNIFIED_IDENTIFIER_REGEX_JS);
+    magmaContext.bind(person);
 
-    assertEquals(true, jsMagmaScriptEvaluator.eval(expression, person, 1));
+    assertEquals(true, magmaContext.eval(expression));
   }
 
   @SuppressWarnings("UnnecessaryBoxing")
@@ -204,22 +211,10 @@ class JsMagmaScriptEvaluatorTest {
   void testValueForLong() {
     Entity person = new DynamicEntity(personLongEntityType);
     person.set("long", Long.MAX_VALUE);
+    magmaContext.bind(person);
 
-    Object result = jsMagmaScriptEvaluator.eval("$('long').value()", person, 1);
+    Object result = magmaContext.eval("$('long').value()");
     assertEquals(valueOf(MAX_VALUE), result);
-  }
-
-  @Test
-  void testValueForXrefDefaultDepth() {
-    Entity gender = new DynamicEntity(genderEntityType);
-    gender.set("id", "1");
-    gender.set("label", "male");
-
-    Entity person = new DynamicEntity(personGenderEntityType);
-    person.set("gender", gender);
-
-    Object result = jsMagmaScriptEvaluator.eval("$('gender').attr('label').value()", person);
-    assertNull(result);
   }
 
   @Test
@@ -230,30 +225,32 @@ class JsMagmaScriptEvaluatorTest {
 
     Entity person = new DynamicEntity(personGenderEntityType);
     person.set("gender", gender);
+    magmaContext.bind(person);
 
     Object scriptExceptionObj =
-        jsMagmaScriptEvaluator.eval("$('gender').attr('xref').attr('label').value()", person);
+        magmaContext.tryEval("$('gender').attr('xref').attr('label').value()");
     assertEquals(
-        "org.molgenis.script.core.ScriptException: TypeError: Cannot read property \"label\" from undefined",
+        "org.molgenis.script.core.ScriptException: TypeError: Cannot read property 'label' of undefined",
         scriptExceptionObj.toString());
   }
 
-  @Test
-  void testValueForMref() {
-    Entity trait = new DynamicEntity(traitEntityType);
-    trait.set("id", "1");
-    trait.set("name", "Hello");
-
-    Entity person = new DynamicEntity(personTraitEntityType);
-    person.set("id", "1");
-    person.set("trait", singletonList(trait));
-
-    Object result = jsMagmaScriptEvaluator.eval("$('trait').value()", person, 3);
-    assertEquals(singletonList("1"), result);
+  private static Object[][] testValueForMref() {
+    return new Object[][] {
+      new Object[] {"$('trait').value()", List.of("1")},
+      new Object[] {
+        "var result = [];$('trait').map(function (entity) {result.push(entity.attr('name').value())});result",
+        List.of("Hello")
+      },
+      new Object[] {
+        "$('trait').map(function (entity) {return entity.attr('name').value()}).value()",
+        List.of("Hello")
+      }
+    };
   }
 
-  @Test
-  void testValueForMrefWithComplexAlgorithm() {
+  @ParameterizedTest
+  @MethodSource
+  void testValueForMref(String expression, Object expected) {
     Entity trait = new DynamicEntity(traitEntityType);
     trait.set("id", "1");
     trait.set("name", "Hello");
@@ -261,31 +258,10 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personTraitEntityType);
     person.set("id", "1");
     person.set("trait", singletonList(trait));
+    magmaContext.bind(person);
 
-    Object result =
-        jsMagmaScriptEvaluator.eval(
-            "var result = [];$('trait').map(function (entity) {result.push(entity.attr('name').value())});result",
-            person,
-            3);
-    assertEquals(singletonList("Hello"), result);
-  }
-
-  @Test
-  void testValueForMrefWithSimplifiedAlgorithm() {
-    Entity trait = new DynamicEntity(traitEntityType);
-    trait.set("id", "1");
-    trait.set("name", "Hello");
-
-    Entity person = new DynamicEntity(personTraitEntityType);
-    person.set("id", "1");
-    person.set("trait", singletonList(trait));
-
-    Object result =
-        jsMagmaScriptEvaluator.eval(
-            "$('trait').map(function (entity) {return entity.attr('name').value()}).value()",
-            person,
-            3);
-    assertEquals(singletonList("Hello"), result);
+    Object result = magmaContext.eval(expression);
+    assertEquals(expected, result);
   }
 
   @Test
@@ -293,7 +269,9 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personWeightEntityType);
     person.set("weight", 82);
 
-    Object weight = jsMagmaScriptEvaluator.eval("$('weight').value()", person, 3);
+    magmaContext.bind(person);
+
+    Object weight = magmaContext.eval("$('weight').value()");
     assertEquals(82, weight);
   }
 
@@ -302,7 +280,9 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personWeightEntityType);
     person.set("weight", 82);
 
-    Object weight = jsMagmaScriptEvaluator.eval("$('weight').value()", person);
+    magmaContext.bind(person);
+
+    Object weight = magmaContext.eval("$('weight').value()");
     assertEquals(82, weight);
   }
 
@@ -310,10 +290,9 @@ class JsMagmaScriptEvaluatorTest {
   void testUnitConversion() {
     Entity person = new DynamicEntity(personWeightEntityType);
     person.set("weight", 82);
+    magmaContext.bind(person);
 
-    Object weight =
-        jsMagmaScriptEvaluator.eval(
-            "$('weight').unit('kg').toUnit('poundmass').value()", person, 3);
+    Object weight = magmaContext.eval("$('weight').unit('kg').toUnit('lb').value()");
     assertEquals(180.7790549915996, weight);
   }
 
@@ -325,8 +304,9 @@ class JsMagmaScriptEvaluatorTest {
 
     Entity person = new DynamicEntity(personGenderEntityType);
     person.set("gender", gender);
+    magmaContext.bind(person);
 
-    Object weight = jsMagmaScriptEvaluator.eval("$('gender').attr('label').value()", person, 3);
+    Object weight = magmaContext.eval("$('gender').attr('label').value()");
     assertEquals("male", weight);
   }
 
@@ -339,7 +319,9 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personGenderEntityType);
     person.set("gender", gender);
 
-    Object weight = jsMagmaScriptEvaluator.eval("$('gender').value() === '1'", person, 3);
+    magmaContext.bind(person);
+
+    Object weight = magmaContext.eval("$('gender').value() === '1'");
     assertEquals(true, weight);
   }
 
@@ -352,7 +334,9 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personGenderEntityType);
     person.set("gender", gender);
 
-    Object result = jsMagmaScriptEvaluator.eval("$('gender').map({'m':'Male'}).value()", person, 3);
+    magmaContext.bind(person);
+
+    Object result = magmaContext.eval("$('gender').map({'m':'Male'}).value()");
     assertEquals("Male", result);
   }
 
@@ -365,18 +349,17 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personGenderEntityType);
     person.set("gender", gender);
 
-    Object result =
-        jsMagmaScriptEvaluator.eval("$('gender').map({'m':'Male'}, 'Female').value()", person, 3);
+    magmaContext.bind(person);
+
+    Object result = magmaContext.eval("$('gender').map({'m':'Male'}, 'Female').value()");
     assertEquals("Female", result);
   }
 
   @Test
   void mapNull() {
-    Object result =
-        jsMagmaScriptEvaluator.eval(
-            "$('gender').map({'20':'2'}, 'B2', 'B3').value()",
-            new DynamicEntity(personGenderEntityType),
-            3);
+    magmaContext.bind(new DynamicEntity(personGenderEntityType));
+
+    Object result = magmaContext.eval("$('gender').map({'20':'2'}, 'B2', 'B3').value()");
     assertEquals("B3", result);
   }
 
@@ -409,13 +392,16 @@ class JsMagmaScriptEvaluatorTest {
 
     String script =
         "var counter = 0;\nvar SUM=newValue(0);\nif(!$('SBP_1').isNull().value()){\n\tSUM.plus($('SBP_1').value());\n\tcounter++;\n}\nif(!$('SBP_2').isNull().value()){\n\tSUM.plus($('SBP_2').value());\n\tcounter++;\n}\nif(counter !== 0){\n\tSUM.div(counter);\nSUM.value();\n}\nelse{\n\tnull;\n}";
-    Object result1 = jsMagmaScriptEvaluator.eval(script, entity0, 3);
+    magmaContext.bind(entity0);
+    Object result1 = magmaContext.eval(script);
     assertEquals(122, result1);
 
-    Object result2 = jsMagmaScriptEvaluator.eval(script, entity1, 3);
+    magmaContext.bind(entity1);
+    Object result2 = magmaContext.eval(script);
     assertEquals(120, result2);
 
-    Object result3 = jsMagmaScriptEvaluator.eval(script, entity2, 3);
+    magmaContext.bind(entity2);
+    Object result3 = magmaContext.eval(script);
     assertNull(result3);
   }
 
@@ -423,24 +409,23 @@ class JsMagmaScriptEvaluatorTest {
   void testGroup() {
     Entity entity1 = new DynamicEntity(personAgeEntityType);
     entity1.set("age", 29);
+    magmaContext.bind(entity1);
 
-    Object result1 =
-        jsMagmaScriptEvaluator.eval("$('age').group([18, 35, 56]).value();", entity1, 3);
+    Object result1 = magmaContext.eval("$('age').group([18, 35, 56]).value();");
     assertEquals("18-35", result1);
 
     Entity entity2 = new DynamicEntity(personAgeEntityType);
     entity2.set("age", 999);
+    magmaContext.bind(entity2);
 
-    Object result2 =
-        jsMagmaScriptEvaluator.eval(
-            "$('age').group([18, 35, 56], [888, 999]).value();", entity2, 3);
+    Object result2 = magmaContext.eval("$('age').group([18, 35, 56], [888, 999]).value();");
     assertEquals(999, result2);
 
     Entity entity3 = new DynamicEntity(personAgeEntityType);
     entity3.set("age", 47);
+    magmaContext.bind(entity3);
 
-    Object result3 =
-        jsMagmaScriptEvaluator.eval("$('age').group([18, 35, 56]).value();", entity3, 3);
+    Object result3 = magmaContext.eval("$('age').group([18, 35, 56]).value();");
     assertEquals("35-56", result3);
   }
 
@@ -448,17 +433,15 @@ class JsMagmaScriptEvaluatorTest {
   void testGroupNull() {
     Entity entity4 = new DynamicEntity(personAgeEntityType);
     entity4.set("age", 47);
+    magmaContext.bind(entity4);
 
-    Object result4 = jsMagmaScriptEvaluator.eval("$('age').group().value();", entity4, 3);
+    Object result4 = magmaContext.eval("$('age').group().value();");
     assertNull(result4);
 
-    Object result5 =
-        jsMagmaScriptEvaluator.eval("$('age').group([56, 18, 35]).value();", entity4, 3);
+    Object result5 = magmaContext.eval("$('age').group([56, 18, 35]).value();");
     assertNull(result5);
 
-    Object result6 =
-        jsMagmaScriptEvaluator.eval(
-            "$('age').group([56, 18, 35], null,'123456').value();", entity4, 3);
+    Object result6 = magmaContext.eval("$('age').group([56, 18, 35], null,'123456').value();");
     assertEquals("123456", result6);
   }
 
@@ -466,12 +449,11 @@ class JsMagmaScriptEvaluatorTest {
   void testGroupConstantValue() {
     Entity entity4 = new DynamicEntity(personAgeEntityType);
     entity4.set("age", 47);
+    magmaContext.bind(entity4);
 
     Object result4 =
-        jsMagmaScriptEvaluator.eval(
-            "var age_variable=new newValue(45);age_variable.group([18, 35, 56]).value();",
-            entity4,
-            3);
+        magmaContext.eval(
+            "var age_variable=new newValue(45);age_variable.group([18, 35, 56]).value();");
     assertEquals("35-56", result4);
   }
 
@@ -479,52 +461,47 @@ class JsMagmaScriptEvaluatorTest {
   void combineGroupMapFunctions() {
     Entity entity1 = new DynamicEntity(personAgeEntityType);
     entity1.set("age", 29);
+    magmaContext.bind(entity1);
 
     Object result1 =
-        jsMagmaScriptEvaluator.eval(
-            "$('age').group([18, 35, 56]).map({'-18':'0','18-35':'1','35-56':'2','56+':'3'}).value();",
-            entity1,
-            3);
+        magmaContext.eval(
+            "$('age').group([18, 35, 56]).map({'-18':'0','18-35':'1','35-56':'2','56+':'3'}).value();");
     assertEquals("1", result1);
 
     Entity entity2 = new DynamicEntity(personAgeEntityType);
     entity2.set("age", 17);
+    magmaContext.bind(entity2);
 
     Object result2 =
-        jsMagmaScriptEvaluator.eval(
-            "$('age').group([18, 35, 56]).map({'-18':'0','18-35':'1','35-56':'2','56+':'3'}).value();",
-            entity2,
-            3);
+        magmaContext.eval(
+            "$('age').group([18, 35, 56]).map({'-18':'0','18-35':'1','35-56':'2','56+':'3'}).value();");
     assertEquals("0", result2);
 
     Entity entity3 = new DynamicEntity(personAgeEntityType);
     entity3.set("age", 40);
+    magmaContext.bind(entity3);
 
     Object result3 =
-        jsMagmaScriptEvaluator.eval(
-            "$('age').group([18, 35, 56]).map({'-18':'0','18-35':'1','35-56':'2','56+':'3'}).value();",
-            entity3,
-            3);
+        magmaContext.eval(
+            "$('age').group([18, 35, 56]).map({'-18':'0','18-35':'1','35-56':'2','56+':'3'}).value();");
     assertEquals("2", result3);
 
     Entity entity4 = new DynamicEntity(personAgeEntityType);
     entity4.set("age", 70);
+    magmaContext.bind(entity4);
 
     Object result4 =
-        jsMagmaScriptEvaluator.eval(
-            "$('age').group([18, 35, 56]).map({'-18':'0','18-35':'1','35-56':'2','56+':'3'}).value();",
-            entity4,
-            3);
+        magmaContext.eval(
+            "$('age').group([18, 35, 56]).map({'-18':'0','18-35':'1','35-56':'2','56+':'3'}).value();");
     assertEquals("3", result4);
 
     Entity entity5 = new DynamicEntity(personAgeEntityType);
     entity5.set("age", 999);
+    magmaContext.bind(entity5);
 
     Object result5 =
-        jsMagmaScriptEvaluator.eval(
-            "$('age').group([18, 35, 56], [999]).map({'-18':0,'18-35':1,'35-56':2,'56+':3,'999':'9'}).value();",
-            entity5,
-            3);
+        magmaContext.eval(
+            "$('age').group([18, 35, 56], [999]).map({'-18':0,'18-35':1,'35-56':2,'56+':3,'999':'9'}).value();");
     assertEquals("9", result5);
   }
 
@@ -548,63 +525,33 @@ class JsMagmaScriptEvaluatorTest {
     Entity entity0 = new DynamicEntity(foodPersonEntityType);
     entity0.set("FOOD59A1", 7);
     entity0.set("FOOD60A1", 6);
+    magmaContext.bind(entity0);
 
     Object result1 =
-        jsMagmaScriptEvaluator.eval(
-            "var SUM_WEIGHT = new newValue(0);SUM_WEIGHT.plus($('FOOD59A1').map({\"1\":0,\"2\":0.2,\"3\":0.6,\"4\":1,\"5\":2.5,\"6\":4.5,\"7\":6.5}, null, null).value());SUM_WEIGHT.plus($('FOOD60A1').map({\"1\":0,\"2\":0.2,\"3\":0.6,\"4\":1,\"5\":2.5,\"6\":4.5,\"7\":6.5}, null, null).value());SUM_WEIGHT.group([0,1,2,6,7]).map({\"0-1\":\"4\",\"1-2\":\"3\",\"2-6\":\"2\",\"6-7\":\"1\", \"7+\" : \"1\"},null,null).value();",
-            entity0,
-            3);
+        magmaContext.eval(
+            "var SUM_WEIGHT = new newValue(0);SUM_WEIGHT.plus($('FOOD59A1').map({\"1\":0,\"2\":0.2,\"3\":0.6,\"4\":1,\"5\":2.5,\"6\":4.5,\"7\":6.5}, null, null).value());SUM_WEIGHT.plus($('FOOD60A1').map({\"1\":0,\"2\":0.2,\"3\":0.6,\"4\":1,\"5\":2.5,\"6\":4.5,\"7\":6.5}, null, null).value());SUM_WEIGHT.group([0,1,2,6,7]).map({\"0-1\":\"4\",\"1-2\":\"3\",\"2-6\":\"2\",\"6-7\":\"1\", \"7+\" : \"1\"},null,null).value();");
 
     assertEquals("1", result1);
   }
 
-  @Test
-  void testPlusValue() {
-    Entity entity0 = new DynamicEntity(personHeightEntityType);
-    entity0.set("height", 180);
-    Object result = jsMagmaScriptEvaluator.eval("$('height').plus(100).value()", entity0, 3);
-    assertEquals(280, result);
+  private static Object[][] testIntegerExpressions() {
+    return new Object[][] {
+      new Object[] {180, "$('height').plus(100).value()", 280},
+      new Object[] {180, "$('height').plus(null).value()", 180},
+      new Object[] {2, "$('height').times(100).value()", 200},
+      new Object[] {200, "$('height').div(100).value()", 2},
+      new Object[] {20, "$('height').pow(2).value()", 400}
+    };
   }
 
-  @Test
-  void testPlusObject() {
+  @MethodSource
+  @ParameterizedTest
+  void testIntegerExpressions(int height, String expression, int expected) {
     Entity entity0 = new DynamicEntity(personHeightEntityType);
-    entity0.set("height", 180);
-    Object result1 =
-        jsMagmaScriptEvaluator.eval("$('height').plus(new newValue(100)).value()", entity0, 3);
-    assertEquals(280, result1);
-  }
-
-  @Test
-  void testPlusNullValue() {
-    Entity entity0 = new DynamicEntity(personHeightEntityType);
-    entity0.set("height", 180);
-    Object result1 = jsMagmaScriptEvaluator.eval("$('height').plus(null).value()", entity0, 3);
-    assertEquals(180, result1);
-  }
-
-  @Test
-  void testTimes() {
-    Entity entity0 = new DynamicEntity(personHeightEntityType);
-    entity0.set("height", 2);
-    Object result = jsMagmaScriptEvaluator.eval("$('height').times(100).value()", entity0, 3);
-    assertEquals(200, result);
-  }
-
-  @Test
-  void div() {
-    Entity entity0 = new DynamicEntity(personHeightEntityType);
-    entity0.set("height", 200);
-    Object result = jsMagmaScriptEvaluator.eval("$('height').div(100).value()", entity0, 3);
-    assertEquals(2, result);
-  }
-
-  @Test
-  void pow() {
-    Entity entity0 = new DynamicEntity(personHeightEntityType);
-    entity0.set("height", 20);
-    Object result = jsMagmaScriptEvaluator.eval("$('height').pow(2).value()", entity0, 3);
-    assertEquals(400, result);
+    entity0.set("height", height);
+    magmaContext.bind(entity0);
+    Object result = magmaContext.eval(expression);
+    assertEquals(expected, result);
   }
 
   @Test
@@ -612,10 +559,9 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personWeightAndHeightEntityType);
     person.set("weight", 82);
     person.set("height", 189);
+    magmaContext.bind(person);
 
-    Object bmi =
-        jsMagmaScriptEvaluator.eval(
-            "$('weight').div($('height').div(100).pow(2)).value()", person, 3);
+    Object bmi = magmaContext.eval("$('weight').div($('height').div(100).pow(2)).value()");
     DecimalFormat df = new DecimalFormat("#.####", new DecimalFormatSymbols(Locale.ENGLISH));
     assertEquals(df.format(82.0 / (1.89 * 1.89)), df.format(bmi));
   }
@@ -636,8 +582,9 @@ class JsMagmaScriptEvaluatorTest {
 
     Entity glucose = new DynamicEntity(personGlucoseMeta);
     glucose.set("GLUC_1", 4.1);
+    magmaContext.bind(glucose);
 
-    Object bmi = jsMagmaScriptEvaluator.eval("$('GLUC_1').div(100).value()", glucose, 3);
+    Object bmi = magmaContext.eval("$('GLUC_1').div(100).value()");
     DecimalFormat df = new DecimalFormat("#.####", new DecimalFormatSymbols(Locale.ENGLISH));
     assertEquals(df.format(4.1 / 100), df.format(bmi));
   }
@@ -646,7 +593,8 @@ class JsMagmaScriptEvaluatorTest {
   void age() {
     Entity person = new DynamicEntity(personBirthDateMeta);
     person.set("birthdate", now().atOffset(UTC).toLocalDate());
-    Object result = jsMagmaScriptEvaluator.eval("$('birthdate').age().value()", person);
+    magmaContext.bind(person);
+    Object result = magmaContext.eval("$('birthdate').age().value()");
     assertEquals(0, result);
   }
 
@@ -655,10 +603,13 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personWeightAndHeightEntityType);
     person.set("weight", 80);
     person.set("height", 20);
+    magmaContext.bind(person);
 
     Collection<Object> result =
-        jsMagmaScriptEvaluator.eval(
-            Arrays.asList("$('weight').value()", "$('height').pow(2).value()"), person);
+        List.of("$('weight').value()", "$('height').pow(2).value()").stream()
+            .map(magmaContext::eval)
+            .collect(Collectors.toList());
+
     assertEquals(asList(80, 400), result);
   }
 
@@ -668,16 +619,18 @@ class JsMagmaScriptEvaluatorTest {
     Entity person = new DynamicEntity(personBirthDateMeta);
     person.set("birthdate", now().atOffset(UTC).toLocalDate());
 
-    jsMagmaScriptEvaluator.eval("$('birthdate').age().value()", person);
-
     Stopwatch sw = Stopwatch.createStarted();
-    jsMagmaScriptEvaluator.eval(Collections.nCopies(10000, "$('birthdate').age().value()"), person);
+    magmaContext.bind(person);
+    for (int i = 0; i < 10000; i++) {
+      magmaContext.eval("$('birthdate').age().value()");
+    }
     System.out.println(sw.elapsed(TimeUnit.MILLISECONDS) + " millis passed evalList");
 
     sw.reset().start();
 
     for (int i = 0; i < 10000; i++) {
-      jsMagmaScriptEvaluator.eval("$('birthdate').age().value()", person);
+      magmaContext.bind(person);
+      magmaContext.eval("$('birthdate').age().value()");
     }
     System.out.println(
         sw.elapsed(TimeUnit.MILLISECONDS)
@@ -688,15 +641,17 @@ class JsMagmaScriptEvaluatorTest {
   void testNull() {
     Entity person0 = new DynamicEntity(personBirthDateMeta);
     person0.set("birthdate", LocalDate.now());
+    magmaContext.bind(person0);
 
     String script = "$('birthdate').age().value() < 18  || $('birthdate').value() != null";
 
-    Object result = jsMagmaScriptEvaluator.eval(script, person0, 3);
+    Object result = magmaContext.eval(script);
     assertEquals(true, result);
 
     Entity person1 = new DynamicEntity(personBirthDateMeta);
     person1.set("birthdate", null);
-    result = jsMagmaScriptEvaluator.eval(script, person1, 3);
+    magmaContext.bind(person1);
+    result = magmaContext.eval(script);
     assertEquals(false, result);
   }
 
@@ -705,40 +660,40 @@ class JsMagmaScriptEvaluatorTest {
     Entity person0 = new DynamicEntity(personWeightEntityType);
     person0.set("weight", 100);
     String script = "$('weight').eq(100).value()";
+    magmaContext.bind(person0);
 
-    Object result = jsMagmaScriptEvaluator.eval(script, person0, 3);
+    Object result = magmaContext.eval(script);
     assertEquals(true, result);
 
     Entity person1 = new DynamicEntity(personWeightEntityType);
     person1.set("weight", 99);
-    result = jsMagmaScriptEvaluator.eval(script, person1, 3);
+    magmaContext.bind(person1);
+    result = magmaContext.eval(script);
     assertEquals(false, result);
   }
 
   @Test
   void testIsValidJson() {
     Entity person = new DynamicEntity(personWeightEntityType);
-    Collection<Object> result =
-        jsMagmaScriptEvaluator.eval(
-            Arrays.asList(
-                "newValue('{\"foo\":3}').isValidJson().value()",
-                "newValue('{foo:3}').isValidJson().value()"),
-            person);
-    assertEquals(asList(true, false), result);
+    magmaContext.bind(person);
+    assertTrue((Boolean) magmaContext.eval("newValue('{\"foo\":3}').isValidJson().value()"));
+    assertFalse((Boolean) magmaContext.eval("newValue('{foo:3}').isValidJson().value()"));
   }
 
   @Test
   void testIsNull() {
     Entity person0 = new DynamicEntity(personWeightEntityType);
     person0.set("weight", null);
+    magmaContext.bind(person0);
     String script = "$('weight').isNull().value()";
 
-    Object result = jsMagmaScriptEvaluator.eval(script, person0, 3);
+    Object result = magmaContext.eval(script);
     assertEquals(true, result);
 
     Entity person1 = new DynamicEntity(personWeightEntityType);
     person1.set("weight", 99);
-    result = jsMagmaScriptEvaluator.eval(script, person1, 3);
+    magmaContext.bind(person1);
+    result = magmaContext.eval(script);
     assertEquals(false, result);
   }
 
@@ -746,14 +701,16 @@ class JsMagmaScriptEvaluatorTest {
   void testNot() {
     Entity person0 = new DynamicEntity(personWeightEntityType);
     person0.set("weight", null);
+    magmaContext.bind(person0);
     String script = "$('weight').isNull().not().value()";
 
-    Object result = jsMagmaScriptEvaluator.eval(script, person0, 3);
+    Object result = magmaContext.eval(script);
     assertEquals(false, result);
 
     Entity person1 = new DynamicEntity(personWeightEntityType);
     person1.set("weight", 99);
-    result = jsMagmaScriptEvaluator.eval(script, person1, 3);
+    magmaContext.bind(person1);
+    result = magmaContext.eval(script);
     assertEquals(true, result);
   }
 
@@ -761,24 +718,28 @@ class JsMagmaScriptEvaluatorTest {
   void testOr() {
     Entity person0 = new DynamicEntity(personWeightEntityType);
     person0.set("weight", null);
+    magmaContext.bind(person0);
     String script = "$('weight').eq(99).or($('weight').eq(100)).value()";
 
-    Object result = jsMagmaScriptEvaluator.eval(script, person0, 3);
+    Object result = magmaContext.eval(script);
     assertEquals(false, result);
 
     Entity person1 = new DynamicEntity(personWeightEntityType);
     person1.set("weight", 99);
-    result = jsMagmaScriptEvaluator.eval(script, person1, 3);
+    magmaContext.bind(person1);
+    result = magmaContext.eval(script);
     assertEquals(true, result);
 
     Entity person2 = new DynamicEntity(personWeightEntityType);
     person2.set("weight", 100);
-    result = jsMagmaScriptEvaluator.eval(script, person2, 3);
+    magmaContext.bind(person2);
+    result = magmaContext.eval(script);
     assertEquals(true, result);
 
     Entity person3 = new DynamicEntity(personWeightEntityType);
     person3.set("weight", 99);
-    result = jsMagmaScriptEvaluator.eval(script, person3, 3);
+    magmaContext.bind(person3);
+    result = magmaContext.eval(script);
     assertEquals(true, result);
   }
 
@@ -787,23 +748,27 @@ class JsMagmaScriptEvaluatorTest {
     Entity person0 = new DynamicEntity(personWeightEntityType);
     person0.set("weight", null);
     String script = "$('weight').gt(100).value()";
+    magmaContext.bind(person0);
 
-    Object result = jsMagmaScriptEvaluator.eval(script, person0, 3);
+    Object result = magmaContext.eval(script);
     assertEquals(false, result);
 
     Entity person1 = new DynamicEntity(personWeightEntityType);
     person1.set("weight", 99);
-    result = jsMagmaScriptEvaluator.eval(script, person1, 3);
+    magmaContext.bind(person1);
+    result = magmaContext.eval(script);
     assertEquals(false, result);
 
     Entity person2 = new DynamicEntity(personWeightEntityType);
     person2.set("weight", 100);
-    result = jsMagmaScriptEvaluator.eval(script, person2, 3);
+    magmaContext.bind(person2);
+    result = magmaContext.eval(script);
     assertEquals(false, result);
 
     Entity person3 = new DynamicEntity(personWeightEntityType);
     person3.set("weight", 101);
-    result = jsMagmaScriptEvaluator.eval(script, person3, 3);
+    magmaContext.bind(person3);
+    result = magmaContext.eval(script);
     assertEquals(true, result);
   }
 
@@ -812,23 +777,27 @@ class JsMagmaScriptEvaluatorTest {
     Entity person0 = new DynamicEntity(personWeightEntityType);
     person0.set("weight", null);
     String script = "$('weight').lt(100).value()";
+    magmaContext.bind(person0);
 
-    Object result = jsMagmaScriptEvaluator.eval(script, person0, 3);
+    Object result = magmaContext.eval(script);
     assertEquals(false, result);
 
     Entity person1 = new DynamicEntity(personWeightEntityType);
     person1.set("weight", 99);
-    result = jsMagmaScriptEvaluator.eval(script, person1, 3);
+    magmaContext.bind(person1);
+    result = magmaContext.eval(script);
     assertEquals(true, result);
 
     Entity person2 = new DynamicEntity(personWeightEntityType);
     person2.set("weight", 100);
-    result = jsMagmaScriptEvaluator.eval(script, person2, 3);
+    magmaContext.bind(person2);
+    result = magmaContext.eval(script);
     assertEquals(false, result);
 
     Entity person3 = new DynamicEntity(personWeightEntityType);
     person3.set("weight", 101);
-    result = jsMagmaScriptEvaluator.eval(script, person3, 3);
+    magmaContext.bind(person3);
+    result = magmaContext.eval(script);
     assertEquals(false, result);
   }
 
@@ -837,23 +806,27 @@ class JsMagmaScriptEvaluatorTest {
     Entity person0 = new DynamicEntity(personWeightEntityType);
     person0.set("weight", null);
     String script = "$('weight').ge(100).value()";
+    magmaContext.bind(person0);
 
-    Object result = jsMagmaScriptEvaluator.eval(script, person0, 3);
+    Object result = magmaContext.eval(script);
     assertEquals(false, result);
 
     Entity person1 = new DynamicEntity(personWeightEntityType);
     person1.set("weight", 99);
-    result = jsMagmaScriptEvaluator.eval(script, person1, 3);
+    magmaContext.bind(person1);
+    result = magmaContext.eval(script);
     assertEquals(false, result);
 
     Entity person2 = new DynamicEntity(personWeightEntityType);
     person2.set("weight", 100);
-    result = jsMagmaScriptEvaluator.eval(script, person2, 3);
+    magmaContext.bind(person2);
+    result = magmaContext.eval(script);
     assertEquals(true, result);
 
     Entity person3 = new DynamicEntity(personWeightEntityType);
     person3.set("weight", 101);
-    result = jsMagmaScriptEvaluator.eval(script, person3, 3);
+    magmaContext.bind(person3);
+    result = magmaContext.eval(script);
     assertEquals(true, result);
   }
 
@@ -862,23 +835,41 @@ class JsMagmaScriptEvaluatorTest {
     Entity person0 = new DynamicEntity(personWeightEntityType);
     person0.set("weight", null);
     String script = "$('weight').le(100).value()";
+    magmaContext.bind(person0);
 
-    Object result = jsMagmaScriptEvaluator.eval(script, person0, 3);
+    Object result = magmaContext.eval(script);
     assertEquals(false, result);
 
     Entity person1 = new DynamicEntity(personWeightEntityType);
     person1.set("weight", 99);
-    result = jsMagmaScriptEvaluator.eval(script, person1, 3);
+    magmaContext.bind(person1);
+
+    result = magmaContext.eval(script);
     assertEquals(true, result);
 
     Entity person2 = new DynamicEntity(personWeightEntityType);
     person2.set("weight", 100);
-    result = jsMagmaScriptEvaluator.eval(script, person2, 3);
+    magmaContext.bind(person2);
+
+    result = magmaContext.eval(script);
     assertEquals(true, result);
 
     Entity person3 = new DynamicEntity(personWeightEntityType);
     person3.set("weight", 101);
-    result = jsMagmaScriptEvaluator.eval(script, person3, 3);
+    magmaContext.bind(person3);
+
+    result = magmaContext.eval(script);
     assertEquals(false, result);
+  }
+
+  @Test
+  @Disabled("Too expensive to keep creating new contexts")
+  void testCleanUpContextWhenBinding() {
+    magmaContext.eval("piet = 3");
+    assertEquals(3, magmaContext.eval("piet"));
+    Entity person0 = new DynamicEntity(personWeightEntityType);
+    person0.set("weight", null);
+    magmaContext.bind(person0);
+    assertThrows(PolyglotException.class, () -> magmaContext.eval("piet"));
   }
 }
